# MetodosNumericos2

./: CMakeLists.txt  fila.cpp  integral4.cpp  main.cpp
metodos/: derivada.cpp  newtoncotes_aberta.cpp  newtoncotes_fechada.cpp
metodos/Derivadas/: CMakeLists.txt  derivadaPrimeira.cpp  derivadaTerceira.cpp  derivadas.hpp
metodos/Derivadas/Classes/: CMakeLists.txt  derivadaSegunda.cpp
metodos/Integrais/: CMakeLists.txt  constante.hpp  gausscheb.cpp  gausshermite.cpp  gausslaguerre.cpp  gausslegendre.cpp  integraisGC.hpp  integraisGG.hpp  integraisGH.hpp  integraisGL.hpp  integraisNC.hpp  mainteste.cpp
metodos/Integrais Newton-Cotes/: mainteste.cpp
metodos/Integrais Newton-Cotes/Classes/: integraisNC.hpp  newtoncotes_aberta.cpp  newtoncotes_fechada.cpp
metodos/Integrais/Classes/: CMakeLists.txt  integraisGL.hpp  integraisNC.hpp
proto/: derivada.cpp  gausslegendre.cpp  integral.cpp  integral4.cpp  mainteste.cpp  teste  testeDerivadas.cpp
