cmake_minimum_required(VERSION 3.5)

project(MeuProjeto)

# Adiciona os subdiret칩rios
add_subdirectory(metodos/Derivadas)
add_subdirectory(metodos/Integrais)

# Adiciona o execut치vel principal
add_executable(Main main.cpp)

# Vincula os subdiret칩rios ao execut치vel principal
target_link_libraries(Main Derivadas Integrais)
