cmake_minimum_required(VERSION 3.5)

project(MeuProjeto)

# Adiciona os subdiret칩rios
add_subdirectory(metodos/Derivadas)
add_subdirectory(metodos/Integrais)


include_directories(${CMAKE_SOURCE_DIR}/metodos/Derivadas)

include_directories(${CMAKE_SOURCE_DIR}/metodos/Integrais)
# Adiciona o execut치vel principal
add_executable(main main.cpp)

# Vincula os subdiret칩rios ao execut치vel principal
target_link_libraries(main Derivadas Integrais)
